# s3tui

./: .gitignore  README.md  pyproject.toml
s3_tui/: __init__.py  app.py  create_directory.py  delete_confirm.py  explorer.py  models.py  move_picker.py  preview.py  preview_panel.py  s3_service.py  styles.tcss  upload_picker.py
