[tool.poetry]
name = "s3-tui"
version = "0.1.0"
description = "S3 file manager in a terminal UI (TUI), with a commander-style layout"
authors = ["ozolsvoz <you@example.com>"]
readme = "README.md"
packages = [{ include = "s3_tui" }]

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.35.0"
textual = "^0.86.0"
pandas = "^2.2.3"
pyarrow = "^18.1.0"
pillow = "^11.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.3"

[tool.poetry.scripts]
s3tui = "s3_tui.app:main"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
